fix title block padding on mobile, start adding folders to breadcrumb

--- a/blocks/breadcrumb-title/breadcrumb-title.css
+++ b/blocks/breadcrumb-title/breadcrumb-title.css
@@ -1,6 +1,6 @@
 main .breadcrumb-title-container {
   background-color: #f2f2f7;
-  padding: 0;
+  padding: 0 32px;
 }
 
 .breadcrumb-title-wrapper {
